@@ -1,3 +1,11 @@
+2006-11-12 Jens Tkotz <jens@peino.de> 1.5.6-svn-b1
+
+ * Fix: Vertical Flip was broken in rotate/flip dialog.
+
+ * Fix: Typos.
+
+   Thanks to C.M. aka H.P.
+
 2006-11-11 Chris Kelly <ckdake@ckdake.com> 1.5.5
 
 * Release: 1.5.5
